--- a/src/Styles/Blogs/Blogs.module.css
+++ b/src/Styles/Blogs/Blogs.module.css
@@ -1,5 +1,6 @@
 .parent {
   margin-top: 2rem;
+  /* border: 3px solid black; */
 }
 
 .parent > div:nth-child(1) {
@@ -130,17 +131,23 @@
   position: relative;
 }
 
+@media (min-width: 1100px) {
+  .clientSecP {
+    padding-top: 30rem;
+  }
+}
+
 .clientSecP > img:nth-child(1) {
-position: absolute;
-top :-2rem;
-left: 0%;
-width: 100% ;
+  position: absolute;
+  top: -2rem;
+  left: 0%;
+  width: 100%;
 }
 .clientSecP > img:nth-child(3) {
-position: absolute;
-bottom: -2rem;
-left: 0%;
-width: 100% ;
+  position: absolute;
+  bottom: -2rem;
+  left: 0%;
+  width: 100%;
 }
 
 .clientSecPChild {
@@ -183,15 +190,14 @@ width: 100% ;
 }
 
 .clientSecPChild > div:nth-child(1) {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
 
-    .clientSecPChild > div:nth-child(2) > img{
-        width: 70%;
-        margin: auto;
-    
-    }
+.clientSecPChild > div:nth-child(2) > img {
+  width: 70%;
+  margin: auto;
+}
