--- a/src/Styles/Navbar/Navbar.module.css
+++ b/src/Styles/Navbar/Navbar.module.css
@@ -5,6 +5,7 @@
   position: fixed;
   background-color: white;
   z-index: 5000;
+  /* position: relative; */
 }
 
 .NavbarP div:nth-child(1) {
@@ -21,7 +22,7 @@
   gap: 1rem;
 }
 .NavbarP p {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 500;
   line-height: 21px;
@@ -45,4 +46,95 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+
+.brg {
+  display: none;
+}
+
+@media (max-width: 950px) {
+  .NavbarP div:nth-child(2) > p:nth-child(-n + 4) {
+    display: none;
+  }
+  .NavbarP div:nth-child(1) {
+    flex: 2;
+    justify-content: center;
+  }
+  .NavbarP div:nth-child(2) {
+    justify-content: flex-start;
+    align-items: center;
+    flex: 1;
+    text-align: left;
+  }
+  .NavbarP div:nth-child(3) {
+    flex: 1.7;
+  }
+}
+
+@media (max-width: 830px) {
+  .NavbarP div:nth-child(3) {
+    padding: 0rem 0rem;
+    flex: 2;
+  }
+}
+
+@media (max-width: 780px) {
+  .NavbarP div:nth-child(3) > div:nth-child(1) {
+    display: none;
+  }
+
+  .NavbarP div:nth-child(1) {
+    flex: 5;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .NavbarP div:nth-child(1) img {
+    margin-left: 5rem;
+    width: 200px;
+  }
+  .NavbarP div:nth-child(2) {
+    flex: 1;
+  }
+  .NavbarP div:nth-child(3) {
+    flex: 1;
+  }
+  .NavbarP > div:nth-child(2) > div {
+    display: none;
+  }
+}
+
+@media (max-width: 650px) {
+  .NavbarP div:nth-child(1) img {
+    margin-left: 2rem;
+    width: 150px;
+  }
+}
+@media (max-width: 650px) {
+  .NavbarP button {
+    width: 100px;
+    height: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem 0rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .NavbarP * {
+    display: none;
+  }
+  .NavbarP button {
+    display: none;
+  }
+  .NavbarP > div:nth-child(1) {
+    /* border: 2px solid black; */
+    display: block !important;
+  }
+  .NavbarP > div:nth-child(1) > img {
+    display: block !important;
+  }
+  .brg {
+    display: block;
+  }
 }
