--- a/src/Styles/Advitisment/Advitisment.module.css
+++ b/src/Styles/Advitisment/Advitisment.module.css
@@ -144,3 +144,43 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 800px) {
+  .parent4 > div:nth-child(3) {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .parent4 input {
+    width: 40%;
+  }
+}
+@media (max-width: 550px) {
+  .parent4 > div:nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .parent4 input {
+    width: 60%;
+  }
+  .parent4 > div:nth-child(2) > p {
+    width: 95%;
+  }
+}
+@media (max-width: 400px) {
+  .parent4 > div:nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .parent4 input {
+    width: 90%;
+  }
+}
