--- a/src/Styles/Blogs/CardType.module.css
+++ b/src/Styles/Blogs/CardType.module.css
@@ -13,6 +13,7 @@
   flex-direction: column;
 }
 
+
 .card {
   width: 70%;
   margin: auto;
@@ -28,6 +29,12 @@
   box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.1);;
 }
 
+@media (max-width:600px) {
+  .card {
+    width: 90%;
+    text-align: center;
+  }
+}
 .card > div:nth-child(1) {
   display: flex;
   flex-direction: column;
@@ -65,18 +72,12 @@
   gap: 2rem;
 }
 
+
+
 .card > div:nth-child(2) > div {
   width: 60%;
-  border-image-slice: 1;
-  border-image-source: linear-gradient(
-      178.18deg,
-      #fd749b -13.56%,
-      #281ac8 158.3%
-    )
-    1;
-  border-style: solid;
-  border-width: 1px;
   padding: 3rem;
+  border: 1px solid gray;
   border-radius: 20px !important;
   display: flex;
   gap: 2rem;
@@ -94,4 +95,18 @@
   line-height: 24px;
   letter-spacing: 0px;
   text-align: center;
+}
+
+@media (max-width:400px) {
+  .card > div:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+  .card > div:nth-child(2) > div {
+    width: 90%;
+ 
+  }
 }
