--- a/src/Styles/Header/Header.module.css
+++ b/src/Styles/Header/Header.module.css
@@ -57,8 +57,7 @@
   line-height: 54px;
   letter-spacing: 0px;
 }
-.parent > div:nth-child(1) > div  {
-
+.parent > div:nth-child(1) > div {
   background-color: white !important;
   display: flex;
   justify-content: center;
@@ -69,37 +68,110 @@
   margin-left: 5rem;
   margin-top: 2rem;
 }
-.parent > div:nth-child(1) > div >p  {
-  background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%) !important;
+.parent > div:nth-child(1) > div > p {
+  background: linear-gradient(
+    178.18deg,
+    #fd749b -13.56%,
+    #281ac8 158.3%
+  ) !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
   margin: auto;
   font-size: 14px !important;
   font-weight: 600 !important;
-  font-family: 'Poppins';
-
+  font-family: "Poppins";
 }
 
 .wel {
-  background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%) !important;
+  background: linear-gradient(
+    178.18deg,
+    #fd749b -13.56%,
+    #281ac8 158.3%
+  ) !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
   /* margin: auto; */
-  font-size: 24px ;
-  font-weight: 600 ;
-  font-family: 'Poppins';
+  font-size: 24px;
+  font-weight: 600;
+  font-family: "Poppins";
 }
 .parent > div:nth-child(1) > p:nth-child(2) {
   font-family: "Open San";
   font-size: 17px;
   line-height: 27px;
 }
- .Allparent > div:nth-child(2) img {
+.Allparent > div:nth-child(2) img {
   position: absolute;
   bottom: -2rem;
   left: 0%;
-  
-} 
+}
+
+@media (max-width: 950px) {
+  .parent > div {
+    padding: 2rem 0px;
+  }
+  .parent > div:nth-child(2) > img {
+    width: 100%;
+  }
+
+  .parent > div:nth-child(1) > * {
+    padding-left: 2rem;
+  }
+  .parent > div:nth-child(1) > p:nth-child(1) {
+    font-size: 32px;
+    line-height: 50px;
+  }
+  .parent > div span {
+    font-size: 32px;
+    line-height: 50px;
+  }
+  .parent > div:nth-child(1) > div {
+    margin-left: 2rem;
+    margin-top: 1rem;
+  }
+}
+@media (max-width: 800px) {
+  .parent > div:nth-child(1) > p:nth-child(1) {
+    font-size: 28px;
+    line-height: 45px;
+  }
+  .parent > div span {
+    font-size: 28px;
+    line-height: 45px;
+  }
+  .parent > div:nth-child(1) > div {
+    margin: auto;
+  }
+}
+
+@media (max-width: 650px) {
+  .parent {
+    flex-direction: column;
+  }
+  .parent > div {
+    text-align: center !important;
+    padding: 0% !important;
+    margin: 0% !important;
+  }
+  .parent > div:nth-child(1) > * {
+    padding-left: 0rem;
+  }
+
+  .Allparent {
+    padding-top: 8rem;
+  }
+  .parent > div:nth-child(1) {
+    padding: 2rem 0px;
+  }
+  .parent > div:nth-child(1) > p:nth-child(1) {
+    font-size: 26px;
+    line-height: 50px;
+  }
+  .parent > div span {
+    font-size: 26px;
+    line-height: 50px;
+  }
+}
 
 /* Next Section */
 .headerBottomSideP {
@@ -114,7 +186,7 @@
 .headerBottomSideP > div:nth-child(2) {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 .headerBottomSideP > div:nth-child(2) > div {
   display: flex;
@@ -122,6 +194,11 @@
   gap: 2rem;
   width: 100%;
   position: relative;
+}
+.headerBottomSideP > div:nth-child(1) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .headerBottomSideP > div:nth-child(2) > div > img:nth-child(1) {
   width: 60%;
@@ -147,4 +224,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 650px) {
+  .headerBottomSideP {
+    flex-direction: column;
+  }
+  .headerBottomSideP > div {
+    padding: 2rem 1rem;
+  }
+  .headerBottomSideP > div:nth-child(2) * {
+    text-align: center !important;
+    margin: auto;
+  }
+  .headerBottomSideP > div:nth-child(2) > p {
+    padding: 0rem 0rem !important;
+  }
 }
