--- a/src/Styles/RatesType/RatesTypeS.module.css
+++ b/src/Styles/RatesType/RatesTypeS.module.css
@@ -14,6 +14,12 @@
   margin: auto;
   border-radius: 12px;
 }
+
+@media (max-width:800px){
+  .card {
+    width: 95%;
+  }
+}
 .cardHeader {
   /* text-align: center; */
   display: flex;
@@ -43,7 +49,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 65px;
+  /* line-height: 65px; */
   margin: auto;
 }
 .cardBody {
@@ -168,4 +174,34 @@
 
 .headerBottomSideP > div:nth-child(2) > * {
   padding-left: 3rem;
+}
+
+
+.headerBottomSideP > div:nth-child(1) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+@media (max-width:650px){
+.headerBottomSideP {
+  flex-direction: column-reverse;
+}
+.card {
+  display: none;
+}
+.headerBottomSideP > div:nth-child(2) > * {
+  padding-left:0%;
+}
+.headerBottomSideP > div:nth-child(2) {
+gap: 0%;
+}
+.headerBottomSideP > div:nth-child(2) > button {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin:1rem 0% ;
+}
 }
