--- a/src/Styles/Navbar/Navbar.module.css
+++ b/src/Styles/Navbar/Navbar.module.css
@@ -76,6 +76,12 @@
     padding: 0rem 0rem;
     flex: 2;
   }
+  .NavbarP button {
+    margin-right: 1rem;
+  }
+  .NavbarP >div:nth-child(2){
+    flex: 0;
+  }
 }
 
 @media (max-width: 780px) {
@@ -87,6 +93,10 @@
     flex: 5;
     align-items: center;
     justify-content: flex-start;
+  }
+
+  .NavbarP > div:nth-child(1) img {
+    margin-left: 5% !important;
   }
   .NavbarP div:nth-child(1) img {
     margin-left: 5rem;
@@ -101,6 +111,10 @@
   .NavbarP > div:nth-child(2) > div {
     display: none;
   }
+  .NavbarP button {
+    margin-left: 80%;
+  }
+  
 }
 
 @media (max-width: 650px) {
@@ -131,9 +145,10 @@
     background-color: #fff;
     width: 100%;
   }
+
   .resN {
     display: flex;
-    padding: 1.5rem 2rem;
+    padding: 1.5rem 1rem;
   }
 
   .resN > div {
