--- a/src/Styles/Footer/Footer.module.css
+++ b/src/Styles/Footer/Footer.module.css
@@ -9,15 +9,15 @@
 .parent > div > p {
   color: #a2a2a2;
 }
-.parent > div > p:nth-child(1) {
-    color: white;
-    margin-bottom: 1rem;
-}
 .parent > div > div {
   display: flex;
   justify-content: left;
   align-items: center;
   gap: 1rem;
+}
+.parent > div > p:nth-child(1) {
+  color: white;
+  margin-bottom: 1rem;
 }
 
 .parent > div:nth-child(1) > img {
@@ -29,7 +29,6 @@
   flex-direction: column;
   gap: 2rem;
 }
-
 
 .parent > div:nth-child(2) {
   flex: 1;
@@ -44,19 +43,19 @@
   gap: 0.5rem;
 }
 .parent > div:nth-child(4) {
-    flex: 2;
-    display: flex;
+  flex: 2;
+  display: flex;
   flex-direction: column;
   gap: 2rem;
   justify-content: center;
   align-items: flex;
 }
 
-.parent > div:nth-child(4) > div  {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+.parent > div:nth-child(4) > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .parent > div:nth-child(4) > div > div {
   width: 4rem;
@@ -65,8 +64,89 @@
 }
 
 .copyR {
-    position: absolute;
-    bottom: 0.5rem;
-    left: 2rem;
-    color: #989898;
+  position: absolute;
+  bottom: 0.5rem;
+  left: 2rem;
+  color: #989898;
+}
+.FooterDivs {
+  display: none;
+}
+@media (max-width: 800px) {
+  .parent {
+    flex-direction: column;
+  }
+  .parent > div:nth-child(1) > img {
+    width: 200px;
+    margin: auto;
+  }
+  .parent > div:nth-child(1) > div {
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+  }
+  .parent > div:nth-child(1) {
+    display: flex;
+    flex-direction: column !important;
+    text-align: center;
+  }
+  .parent > div:nth-child(2) {
+    display: none;
+  }
+  .parent > div:nth-child(3) {
+    display: none;
+  }
+  .parent > div:nth-child(4) {
+    display: none;
+  }
+  .parent > div > div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .FooterDivs > div > p:nth-child(1) {
+    color: white;
+    margin-bottom: 1rem;
+  }
+  .FooterDivs {
+    background-color: #151515;
+    display: flex;
+    padding: 2rem;
+    gap: 3rem;
+    position: relative;
+    flex-wrap: wrap;
+    text-align: left;
+  }
+
+  .FooterDivs > div > p {
+    color: #a2a2a2;
+  }
+  .FooterDivs > div > div {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 1rem;
+  }
+  .FooterDivs div {
+    flex: 1;
+    flex-direction: column;
+  }
+  .FooterDivs > div:nth-child(3) > div > div {
+    width: 25px;
+    height: 25px;
+    background-color: #a2a2a2;
+  }
+  .FooterDivs > div:nth-child(3) > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width:500px) {
+  .parent > div:nth-child(1) > img {
+    width: 150px;
+    margin: auto;
+  }
 }
