--- a/src/Styles/Header/Header.module.css
+++ b/src/Styles/Header/Header.module.css
@@ -6,7 +6,7 @@
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: 10rem;
+  padding-top:7rem;
 }
 
 .parent {
@@ -150,7 +150,7 @@
   }
   .parent > div {
     text-align: center !important;
-    padding: 0% !important;
+    padding: 2rem 0px;
     margin: 0% !important;
   }
   .parent > div:nth-child(1) > * {
