--- a/src/Styles/Footer/Footer.module.css
+++ b/src/Styles/Footer/Footer.module.css
@@ -149,4 +149,10 @@
     width: 150px;
     margin: auto;
   }
+  .FooterDivs {
+    padding: 0%;
+  }
+  .parent {
+    padding:2rem 1rem ;
+  }
 }
