--- a/src/Styles/AboutPage/TeamsComp.module.css
+++ b/src/Styles/AboutPage/TeamsComp.module.css
@@ -151,6 +151,11 @@
 }
 
 @media (max-width: 500px) {
+  .P2 > div * {
+    font-size: 24px !important;
+    font-weight: 400;
+    line-height: 45px;
+  }
   .P2 > p:nth-child(2) {
     width: 95%;
   }
