--- a/src/Styles/Navbar/Navbar.module.css
+++ b/src/Styles/Navbar/Navbar.module.css
@@ -1,141 +1,87 @@
 .NavbarP {
-  width: 100%;
   display: flex;
-  padding: 2rem 3rem 2rem 0rem;
-  position: fixed;
-  background-color: white;
-  z-index: 5000;
-  /* position: relative; */
+  padding: 2rem;
 }
 
-.NavbarP div:nth-child(1) {
+.NavbarP > div:nth-child(1) {
+  display: flex;
+  flex: 3;
+}
+
+.NavbarP > div:nth-child(2) {
+  display: flex;
   flex: 1.5;
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
-.NavbarP div:nth-child(2) {
-  flex: 2;
+
+.NavbarP > div:nth-child(3) {
   display: flex;
-  justify-content: center;
+  flex: 2.5;
+  justify-content: space-evenly;
   align-items: center;
-  gap: 1rem;
 }
+@media (max-width: 1000px) {
+  .NavbarP {
+    gap: 2rem;
+  }
+  .NavbarP > div:nth-child(1) {
+    flex: 2;
+  }
+  .NavbarP > div:nth-child(2) {
+    flex: 1.5;
+  }
+  .NavbarP > div:nth-child(3) {
+    flex: 1.5;
+  }
+}
+
 .NavbarP p {
-  font-family: "Poppins", sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 21px;
-  letter-spacing: 0px;
-  text-align: center;
+  font-family: 'Poppins';
+font-size: 14px;
+font-weight: 700;
+line-height: 21px;
+letter-spacing: 0px;
+/* text-align: left; */
+
 }
 
-.NavbarP div:nth-child(2) * {
-  flex: 1;
+@media (max-width: 850px) {
+  .NavbarP > div:nth-child(2) > * {
+    display: none;
+  }
+  .NavbarP > div:nth-child(2) > p:nth-child(4) {
+    display: block !important;
+  }
+  .NavbarP > div:nth-child(1) {
+    flex: 2 !important;
+  }
+  .NavbarP > div:nth-child(2) {
+    flex: 1 !important;
+    text-align: right;
+  }
+  .NavbarP > div:nth-child(3) {
+    padding:0px 2px;
+    flex: 2.5 !important;
+    gap: 0.2rem;
+  }
 }
-.NavbarP > div > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.NavbarP div:nth-child(3) {
-  padding: 0px 1rem;
-  flex: 1.5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
+@media (max-width: 700px) {
+  .NavbarP > div:nth-child(3) > div:nth-child(1){
+    display: none;
+  }
+  .NavbarP > div:nth-child(1) {
+    flex: 3 !important;
+  }
+  .NavbarP  img {
+    position: absolute;
+    top:2.5rem;
+    left:2rem;
+  }
 }
 
-.brg {
+.resNP {
   display: none;
-}
-
-@media (max-width: 950px) {
-  .NavbarP div:nth-child(2) > p:nth-child(-n + 4) {
-    display: none;
-  }
-  .NavbarP div:nth-child(1) {
-    flex: 2;
-    justify-content: center;
-  }
-  .NavbarP div:nth-child(2) {
-    justify-content: flex-start;
-    align-items: center;
-    flex: 1;
-    text-align: left;
-  }
-  .NavbarP div:nth-child(3) {
-    flex: 1.7;
-  }
-}
-
-@media (max-width: 830px) {
-  .NavbarP div:nth-child(3) {
-    padding: 0rem 0rem;
-    flex: 2;
-  }
-  .NavbarP button {
-    margin-right: 1rem;
-  }
-  .NavbarP >div:nth-child(2){
-    flex: 0;
-  }
-}
-
-@media (max-width: 780px) {
-  .NavbarP div:nth-child(3) > div:nth-child(1) {
-    display: none;
-  }
-
-  .NavbarP div:nth-child(1) {
-    flex: 5;
-    align-items: center;
-    justify-content: flex-start;
-  }
-.dropdown {
-  margin-left: 75%;
-}
-  .NavbarP > div:nth-child(1) img {
-    margin-left: 5% !important;
-  }
-  .NavbarP div:nth-child(1) img {
-    margin-left: 5rem;
-    width: 200px;
-  }
-  .NavbarP div:nth-child(2) {
-    flex: 1;
-  }
-  .NavbarP div:nth-child(3) {
-    flex: 1;
-  }
-  .NavbarP > div:nth-child(2) > div {
-    display: none;
-  }
-  .NavbarP button {
-    margin-left: 80%;
-  }
-  .home {
-    border: 2px solid  black !important;
-  }
-}
-
-@media (max-width: 650px) {
-  .NavbarP div:nth-child(1) img {
-    margin-left: 2rem;
-    width: 150px;
-  }
-}
-@media (max-width: 650px) {
-  .NavbarP button {
-    width: 100px;
-    height: 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0rem 0rem;
-  }
 }
 
 @media (max-width: 500px) {
@@ -144,6 +90,7 @@
   }
 
   .resNP {
+    display: block;
     position: fixed;
     z-index: 12;
     background-color: #fff;
