--- a/src/Styles/Navbar/Navbar.module.css
+++ b/src/Styles/Navbar/Navbar.module.css
@@ -37,13 +37,12 @@
 }
 
 .NavbarP p {
-  font-family: 'Poppins';
-font-size: 14px;
-font-weight: 700;
-line-height: 21px;
-letter-spacing: 0px;
-/* text-align: left; */
-
+  font-family: "Poppins";
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0px;
+  cursor: pointer;
 }
 
 @media (max-width: 850px) {
@@ -61,22 +60,22 @@ letter-spacing: 0px;
     text-align: right;
   }
   .NavbarP > div:nth-child(3) {
-    padding:0px 2px;
+    padding: 0px 2px;
     flex: 2.5 !important;
     gap: 0.2rem;
   }
 }
 @media (max-width: 700px) {
-  .NavbarP > div:nth-child(3) > div:nth-child(1){
+  .NavbarP > div:nth-child(3) > div:nth-child(1) {
     display: none;
   }
   .NavbarP > div:nth-child(1) {
     flex: 3 !important;
   }
-  .NavbarP  img {
+  .NavbarP img {
     position: absolute;
-    top:2.5rem;
-    left:2rem;
+    top: 2.5rem;
+    left: 2rem;
   }
 }
 
@@ -114,4 +113,43 @@ letter-spacing: 0px;
   .resN > div:nth-child(2) > img {
     transform: scale(1.2);
   }
+}
+
+.offcanvas {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  bottom: 100%;
+  left: 0%;
+  z-index: 1176760001;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image:url('../../Images/Header/Rectangle\ 284.png');
+  color: white;
+  transition: 1.5s;
+  /* position: relative; */
+}
+
+.offcanvas  > div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+.offcanvas p {
+  font-family: "Poppins";
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0px;
+  cursor: pointer;
+}
+.offcanvas > div:nth-child(1) p:nth-child(1) {
+   position: absolute;
+   top: 1rem;
+   right: 1rem;
 }
