--- a/src/Styles/BlogContentPage/BlogContentP.module.css
+++ b/src/Styles/BlogContentPage/BlogContentP.module.css
@@ -71,6 +71,18 @@
     bottom: -2rem;
     left: 0%;
   }
+
+  @media (min-width:1400px) {
+    .Allparent > div:nth-child(2) img {
+      width: 100vw;
+    bottom: -3rem;
+    }
+
+    /* .Allparent {
+      padding: 6rem 0px;
+    } */
+
+  }
   
   @media (max-width: 950px) {
     .parent > div {
