--- a/src/Styles/LandingPage/Blogs/Blogs.module.css
+++ b/src/Styles/LandingPage/Blogs/Blogs.module.css
@@ -160,11 +160,23 @@
   background-repeat: no-repeat;
   padding: 20rem 1rem;
   position: relative;
+  background-size: cover;
 }
 
 @media (min-width: 1100px) {
   .clientSecP {
-    padding-top: 30rem;
+    padding: 30rem 0px;
+  }
+  .clientSecP > img:nth-child(1) {
+    top: -3rem !important;
+  }
+}
+@media (min-width: 1800px) {
+  .clientSecP {
+    padding-top: 45rem;
+  }
+  .clientSecP > img:nth-child(1) {
+    top: -4rem !important;
   }
 }
 
