--- a/src/Styles/LandingPage/Blogs/CardType.module.css
+++ b/src/Styles/LandingPage/Blogs/CardType.module.css
@@ -6,13 +6,25 @@
   z-index: 1;
 }
 
+@media (min-width: 1400px) {
+  .parent {
+    background-size: 100%;
+  }
+  .parent > img {
+    bottom: -4rem;
+    left: 0%;
+    z-index: -1;
+    height: 70%;
+    width: 100vw;
+  }
+}
+
 .cardC {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
 
 .card {
   width: 70%;
@@ -26,10 +38,10 @@
   border-radius: 12px;
   margin-top: 5rem;
   padding: 3rem 2rem;
-  box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.1);;
+  box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.1);
 }
 
-@media (max-width:600px) {
+@media (max-width: 600px) {
   .card {
     width: 90%;
     text-align: center;
@@ -59,7 +71,6 @@
 }
 
 .parent > img {
-
   position: absolute;
   bottom: -2rem;
   left: 0%;
@@ -71,8 +82,6 @@
   flex-direction: row;
   gap: 2rem;
 }
-
-
 
 .card > div:nth-child(2) > div {
   width: 60%;
@@ -97,7 +106,7 @@
   text-align: center;
 }
 
-@media (max-width:400px) {
+@media (max-width: 400px) {
   .card > div:nth-child(2) {
     display: flex;
     flex-direction: column;
@@ -107,6 +116,5 @@
   }
   .card > div:nth-child(2) > div {
     width: 90%;
- 
   }
 }
