--- a/src/Styles/LandingPage/RatesType/RatesTypeS.module.css
+++ b/src/Styles/LandingPage/RatesType/RatesTypeS.module.css
@@ -1,13 +1,28 @@
 .parent {
   background-image: url(../../Images/RatesTypeS/Mask.png);
   margin: 2rem 0px;
+  background-size: 100%;
 }
 
 .parent > img:nth-child(1) {
   position: relative;
-  bottom: 2rem;
+  bottom: 3rem;
 }
 
+@media (min-width: 1400px) {
+  .parent > img:nth-child(1) {
+    position: relative;
+    bottom: 5rem;
+    width: 100vw;
+    left: 0%;
+  }
+  .parent img:nth-child(3) {
+    position: relative;
+    top: 4rem;
+    width: 100vw;
+    left: 0%;
+  }
+}
 .card {
   background-color: #ffffff;
   width: 70%;
@@ -15,7 +30,18 @@
   border-radius: 12px;
 }
 
-@media (max-width:800px){
+.gewc {
+  background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+}
+
+@media (max-width: 800px) {
   .card {
     width: 95%;
   }
@@ -117,7 +143,7 @@
   gap: 0.5rem;
 }
 
-.cardBody > div:nth-child(1) > div:nth-child(2){
+.cardBody > div:nth-child(1) > div:nth-child(2) {
   display: none;
 }
 /* NextS*/
@@ -176,32 +202,30 @@
   padding-left: 3rem;
 }
 
-
 .headerBottomSideP > div:nth-child(1) {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-
-@media (max-width:650px){
-.headerBottomSideP {
-  flex-direction: column-reverse;
-}
-.card {
-  display: none;
-}
-.headerBottomSideP > div:nth-child(2) > * {
-  padding-left:0%;
-}
-.headerBottomSideP > div:nth-child(2) {
-gap: 0%;
-}
-.headerBottomSideP > div:nth-child(2) > button {
-  width: 30%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin:1rem 0% ;
-}
+@media (max-width: 650px) {
+  .headerBottomSideP {
+    flex-direction: column-reverse;
+  }
+  .card {
+    display: none;
+  }
+  .headerBottomSideP > div:nth-child(2) > * {
+    padding-left: 0%;
+  }
+  .headerBottomSideP > div:nth-child(2) {
+    gap: 0%;
+  }
+  .headerBottomSideP > div:nth-child(2) > button {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0%;
+  }
 }
