add correct paths

--- a/src/Styles/LandingPage/Advitisment/Advitisment.module.css
+++ b/src/Styles/LandingPage/Advitisment/Advitisment.module.css
@@ -49,7 +49,7 @@
 
 .parent2 {
   width: 100%;
-  background-image: url("../../Images/Advitisment/Rectangle 3.png");
+  background-image: url("../../../Images/LandingPage/Advitisment/Rectangle 3.png");
   background-size: 100%;
   background-repeat: no-repeat;
   z-index: 9;
