--- a/src/Styles/LandingPage/Blogs/Blogs.module.css
+++ b/src/Styles/LandingPage/Blogs/Blogs.module.css
@@ -156,7 +156,7 @@
 
 /* NEXTS */
 .clientSecP {
-  background-image: url("../../Images/Blogs/Mask (1).png");
+  background-image: url("../../../Images/LandingPage/Blogs/Mask (1).png");
   background-repeat: no-repeat;
   padding: 20rem 1rem;
   position: relative;
