--- a/src/Styles/LandingPage/Blogs/CardType.module.css
+++ b/src/Styles/LandingPage/Blogs/CardType.module.css
@@ -1,6 +1,6 @@
 .parent {
   width: 100%;
-  background-image: url(../../Images/Blogs/Rectangle.png);
+  background-image: url(../../../Images/LandingPage/Blogs/Rectangle.png);
   background-repeat: no-repeat;
   position: relative;
   z-index: 1;
