--- a/src/Styles/LandingPage/RatesType/RatesTypeS.module.css
+++ b/src/Styles/LandingPage/RatesType/RatesTypeS.module.css
@@ -1,5 +1,5 @@
 .parent {
-  background-image: url(../../Images/RatesTypeS/Mask.png);
+  background-image: url(../../../Images/LandingPage/RatesTypeS/Mask.png);
   margin: 2rem 0px;
   background-size: 100%;
 }
