--- a/src/Styles/LandingPage/Blogs/Blogs.module.css
+++ b/src/Styles/LandingPage/Blogs/Blogs.module.css
@@ -1,6 +1,7 @@
 .parent {
   margin-top: 2rem;
   /* border: 3px solid black; */
+  padding: 4rem 0px 0px 0px;
 }
 
 .parent > div:nth-child(1) {
@@ -23,7 +24,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
-  font-size: 22px;
+  font-size: 28px;
   line-height: 35px;
 }
 
@@ -67,7 +68,7 @@
 }
 .cardsP > div > p:nth-child(2) {
   font-family: " Poppins";
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 30px;
   letter-spacing: 0px;
@@ -84,7 +85,7 @@
 }
 .cardsP > div > p:nth-child(3) {
   font-family: "Poppins";
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 19px;
   letter-spacing: 0px;
