--- a/src/Styles/AboutPage/AboutPHeader.module.css
+++ b/src/Styles/AboutPage/AboutPHeader.module.css
@@ -6,7 +6,7 @@
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: 0rem;
+  padding-top: 10rem;
 }
 
 .parent {
@@ -34,8 +34,8 @@
 }
 .parent > div span {
   font-family: "Poppins";
-  font-size: 32px;
-  font-weight: 300;
+  font-size: 40px;
+  font-weight: 700;
   line-height: 60px;
   letter-spacing: 0px;
 }
@@ -51,17 +51,11 @@
   line-height: 18px;
   letter-spacing: 0px;
 }
-.parent > div:nth-child(1) > p:nth-child(2) {
-  font-family: "Open Sans";
-  font-size: 32px;
-  font-weight: 300;
-  line-height: 54px;
-  letter-spacing: 0px;
-}
 
 .parent > div:nth-child(1) > p:nth-child(3) {
-  font-family: "Open San";
-  font-size: 17px;
+  font-family: "Poppins";
+  font-size: 18px;
+  font-weight: 400;
   line-height: 27px;
 }
 .Allparent > div:nth-child(2) img {
@@ -118,6 +112,7 @@
 @media (max-width: 650px) {
   .parent {
     flex-direction: column;
+    padding: 7rem 0px;
   }
   .parent > div {
     text-align: center !important;
@@ -135,7 +130,7 @@
     padding: 2rem 0px;
   }
   .parent > div:nth-child(1) > p:nth-child(2) {
-    font-size: 26px;
+    font-size: 36px;
     line-height: 50px;
   }
   .parent > div span {
@@ -162,8 +157,8 @@
   ) !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 18px;
+  font-weight: 700;
   line-height: 25px;
   font-family: "Poppins";
   text-align: center;
@@ -228,8 +223,8 @@
   ) !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 700;
   line-height: 45px;
   font-family: "Poppins";
   text-align: center;
