--- a/src/Styles/AboutPage/TeamsComp.module.css
+++ b/src/Styles/AboutPage/TeamsComp.module.css
@@ -70,8 +70,8 @@
   ) !important;
   background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
-  font-family: "Poppins";
-  font-size: 18px;
+  font-family: "Open Sans";
+  font-size: 32px;
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0px;
@@ -79,8 +79,8 @@
 }
 
 .CardP > div > div > p:nth-child(2) {
-  font-family: "Open Sans";
-  font-size: 16px;
+  font-family: "Poppins";
+  font-size: 14px;
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0px;
@@ -119,7 +119,7 @@
   background-color: white;
   position: relative;
   z-index: 5;
-  padding: 2rem 1rem;
+  padding: 4rem 1rem 2rem 1rem;
   gap: 1rem;
 }
 
@@ -132,8 +132,8 @@
   background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
   font-family: "Poppins";
-  font-size: 23px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 700;
   line-height: 30px;
   letter-spacing: 0px;
   text-align: right;
