--- a/src/Styles/BlogPage/BlogPHeader.module.css
+++ b/src/Styles/BlogPage/BlogPHeader.module.css
@@ -6,7 +6,7 @@
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
-    padding-top: 0rem;
+    padding-top: 5rem;
   }
 
   .parent {
@@ -34,8 +34,8 @@
   }
   .parent > div span {
     font-family: "Poppins";
-    font-size: 32px;
-    font-weight: 300;
+    font-size: 40px;
+    font-weight: 700;
     line-height: 60px;
     letter-spacing: 0px;
   }
@@ -53,15 +53,16 @@
   }
   .parent > div:nth-child(1) > p:nth-child(2) {
     font-family: "Open Sans";
-    font-size: 32px;
-    font-weight: 300;
+    font-size: 40px;
+    font-weight: 700;
     line-height: 54px;
     letter-spacing: 0px;
   }
 
   .parent > div:nth-child(1) > p:nth-child(3) {
-    font-family: "Open San";
-    font-size: 17px;
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-weight: 400;
     line-height: 27px;
   }
   .Allparent > div:nth-child(2) img {
