--- a/src/Styles/Footer/Footer.module.css
+++ b/src/Styles/Footer/Footer.module.css
@@ -8,6 +8,11 @@
 
 .parent > div > p {
   color: #a2a2a2;
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 24px;
 }
 .parent > div > div {
   display: flex;
@@ -18,6 +23,11 @@
 .parent > div > p:nth-child(1) {
   color: white;
   margin-bottom: 1rem;
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 24px;
 }
 
 .parent > div:nth-child(1) > img {
@@ -30,7 +40,7 @@
   gap: 2rem;
 }
 
-.parent > div:nth-child(2) {
+.parent > div:nth-child(2)  {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -72,6 +82,7 @@
 .FooterDivs {
   display: none;
 }
+
 @media (max-width: 800px) {
   .parent {
     flex-direction: column;
