--- a/src/Styles/LandingPage/Header/Header.module.css
+++ b/src/Styles/LandingPage/Header/Header.module.css
@@ -6,7 +6,7 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: 0rem;
+  padding-top: 10rem;
 }
 
 .parent {
@@ -52,8 +52,15 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
 
 .parent > div:nth-child(1) > p:nth-child(1) {
   font-family: "Open Sans";
-  font-size: 32px;
+  font-size: 40px;
   font-weight: 300;
+  line-height: 54px;
+  letter-spacing: 0px;
+}
+.parent > div:nth-child(1) > p:nth-child(1) > span {
+  font-family: "Poppins";
+  font-size: 40px;
+  font-weight: 700;
   line-height: 54px;
   letter-spacing: 0px;
 }
@@ -90,12 +97,13 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
   ) !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 600;
   font-family: "Poppins";
 }
 .parent > div:nth-child(1) > p:nth-child(2) {
-  font-family: "Open San";
+  font-family: "Poppins";
+  font-weight: 400;
   font-size: 17px;
   line-height: 27px;
 }
@@ -122,6 +130,9 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
     font-size: 32px;
     line-height: 50px;
   }
+  .parent > div:nth-child(1) > p:nth-child(1) > span{
+    font-size: 32px;
+  }
   .parent > div span {
     font-size: 32px;
     line-height: 50px;
@@ -135,6 +146,9 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
   .parent > div:nth-child(1) > p:nth-child(1) {
     font-size: 28px;
     line-height: 45px;
+  }
+  .parent > div:nth-child(1) > p:nth-child(1) > span{
+    font-size: 28px;
   }
   .parent > div span {
     font-size: 28px;
@@ -165,7 +179,7 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
     padding: 2rem 0px;
   }
   .parent > div:nth-child(1) > p:nth-child(1) {
-    font-size: 26px;
+    font-size: 28px;
     line-height: 50px;
   }
   .parent > div span {
@@ -217,7 +231,7 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
   left: 0.5rem;
 }
 .headerBottomSideP > div:nth-child(2) > p:nth-child(2) {
-  font-family: " Poppins";
+  font-family: "Poppins";
   font-size: 16px;
   font-weight: 400;
   line-height: 30px;
