--- a/src/Styles/Navbar/Navbar.module.css
+++ b/src/Styles/Navbar/Navbar.module.css
@@ -1,6 +1,12 @@
 .NavbarP {
   display: flex;
   padding: 2rem;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  background-color: #fff;
+  z-index: 59;
 }
 
 .NavbarP > div:nth-child(1) {
@@ -44,7 +50,7 @@
 .NavbarP p {
   font-family: "Poppins";
   font-size: 14px;
-  font-weight: 100;
+  font-weight: 700;
   line-height: 21px;
   letter-spacing: 0px;
   text-align: left;
@@ -178,3 +184,94 @@
     display: flex !important;
   }
 }
+
+/* Droper Configration */
+.droper {
+  position: relative;
+}
+
+.droper > div {
+  position: absolute;
+  top: 100%;
+  right: -50%;
+  border: 2px solid red;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.droper img {
+  width: 200px !important;
+  height: 200px !important;
+  position: absolute;
+  z-index: 2783672;
+}
+
+.droper p {
+  position: absolute;
+}
+
+.li1{
+  
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 18px;
+
+color: #333333;
+}
+.li2{
+  
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 18px;
+
+color: #333333;
+}
+
+
+.li1:hover {
+  background: linear-gradient(
+    178.18deg,
+    rgb(253, 116, 155) -13.56%,
+    rgb(40, 26, 200) 158.3%
+  );
+  color: #FFFFFF !important;
+}
+.li2:hover {
+  background: linear-gradient(
+    178.18deg,
+    rgb(253, 116, 155) -13.56%,
+    rgb(40, 26, 200) 158.3%
+  );
+  color: #FFFFFF !important;
+}
+.poc {
+  position: absolute;
+  right:-8rem;
+  top:0rem;
+  display: none;
+}
+
+.sellbitcoin{
+  position: relative;
+}
+.sellbitcoin:hover .poc {
+  display: block !important;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+
+  
+  @media (max-width:1000px) {
+    .poc {
+      width: 20vw;
+    }
+      
+  }
