--- a/src/Styles/Footer/Footer.module.css
+++ b/src/Styles/Footer/Footer.module.css
@@ -107,9 +107,9 @@ line-height: 24px;
   .parent > div:nth-child(3) {
     display: none;
   }
-  .parent > div:nth-child(4) {
+  /* .parent > div:nth-child(4) {
     display: none;
-  }
+  } */
   .parent > div > div {
     display: flex;
     justify-content: flex-start;
