--- a/src/Styles/LandingPage/RatesType/RatesTypeS.module.css
+++ b/src/Styles/LandingPage/RatesType/RatesTypeS.module.css
@@ -2,6 +2,7 @@
   background-image: url(../../../Images/LandingPage/RatesTypeS/Mask.png);
   margin: 2rem 0px;
   background-size: 100%;
+  background-size: cover;
 }
 
 .parent > img:nth-child(1) {
@@ -46,6 +47,16 @@
     width: 95%;
   }
 }
+@media (max-width:1300px) {
+  .card {
+    width: 80%;
+  }
+}
+@media (max-width:1100px) {
+  .card {
+    width: 95%;
+  }
+}
 .cardHeader {
   /* text-align: center; */
   display: flex;
@@ -74,7 +85,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 18px;
   /* line-height: 65px; */
   margin: auto;
 }
@@ -212,9 +223,6 @@
   .headerBottomSideP {
     flex-direction: column-reverse;
   }
-  .card {
-    display: none;
-  }
   .headerBottomSideP > div:nth-child(2) > * {
     padding-left: 0%;
   }
@@ -228,4 +236,84 @@
     align-items: center;
     margin: 1rem 0%;
   }
+}
+@media (max-width: 750px) {
+  .card > div:nth-child(3) {
+    flex-direction: column;
+  }
+}
+
+
+
+
+
+.cardsParent {
+  width: 100%;
+  margin: auto;
+}
+
+.cardsParent img{
+  width: 25px;
+  height: 25px;
+}
+  .card {
+    height: 375px;
+    font-family: 'Poppins' !important;
+  }
+
+@media (min-width:1000px) {
+  .heading{
+    display: none;
+  }
+}
+@media (max-width:1000px) {
+  .heading{
+    display: flex;
+    flex-direction: column;
+  }
+  .cardsParent{
+    flex-direction: column;
+  }
+  .card {
+    width: 50%;
+    height: 375px;
+    overflow-y: scroll;
+    font-family: 'Poppins' !important;
+  }
+  .gradientType{
+    display: none !important;
+  }
+}
+.arrows {
+  width: 15px !important;
+  height: 15px !important;
+}
+@media (max-width:700px) {
+  .card{
+    width: 70%;
+  }
+}
+@media (max-width:500px) {
+  .card{
+    width: 80%;
+  }
+}
+@media (max-width:400px) {
+  .card{
+    width: 92%;
+  }
+}
+
+.card button{
+  background: linear-gradient(178.18deg, #FD749B -13.56%, #281AC8 158.3%);
+border-radius: 5px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 8px;
+line-height: 25px;
+text-align: center;
+color: #FFFFFF;
+width: 85px;
+height: 24px;
 }
