--- a/src/Styles/LandingPage/Advitisment/Advitisment.module.css
+++ b/src/Styles/LandingPage/Advitisment/Advitisment.module.css
@@ -66,14 +66,13 @@
   .parent2 > img {
     position: relative !important ;
 
-    bottom: 4rem;
+    bottom: 2rem;
     z-index: 9;
     width: 100vw !important; 
   }
     
 }
 .parent2 > div {
-  margin-top: 2rem;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -82,10 +81,16 @@
   width: 100%;
 }
 .parent2 > div > img {
-  margin-top: 5rem;
-  width: 25%;
+  width: 271px;
 }
 
+
+@media (max-width: 1000px) {
+  .parent2 > div > img {
+    width:25%;
+  }
+  
+}
 /* New section */
 
 .parent4 {
@@ -95,7 +100,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: 3rem 1rem;
+  padding: 3rem 1rem 6rem 1rem;
 }
 
 .parent4 > div:nth-child(1) > img {
@@ -141,7 +146,12 @@
 .parent4 input {
   border: 2px solid grey;
   padding: 0.7rem 1rem;
-  width: 30%;
+  width: 388px;
+  height: 54px;
+  outline: 0;
+  border-style: solid;
+  border-width: 1px;
+  border-color:#281ac8;
   text-align: left;
   border-radius: 100px;
   font-family: "Poppins";
@@ -167,7 +177,7 @@
     gap: 1rem;
   }
   .parent4 input {
-    width: 40%;
+    width: 60%;
   }
 }
 @media (max-width: 550px) {
@@ -179,7 +189,7 @@
     gap: 1rem;
   }
   .parent4 input {
-    width: 60%;
+    width: 75%;
   }
   .parent4 > div:nth-child(2) > p {
     width: 95%;
