--- a/src/Styles/LandingPage/Blogs/Blogs.module.css
+++ b/src/Styles/LandingPage/Blogs/Blogs.module.css
@@ -1,6 +1,5 @@
 .parent {
   margin-top: 2rem;
-  /* border: 3px solid black; */
   padding: 4rem 0px 0px 0px;
 }
 
@@ -25,7 +24,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 28px;
-  line-height: 35px;
+  line-height: 42px;
 }
 
 .div1 > img {
@@ -44,9 +43,16 @@
 }
 
 .cardsP {
+  width: 85%;
   display: flex;
-  margin: 3rem 0px;
+  margin: 3rem  auto;
   padding: 2rem 3rem;
+}
+
+@media (max-width: 1100px) {
+  .cardsP{
+  width: 95%;
+  }
 }
 .cardsP > div {
   border: 2px solid #888888;
@@ -55,7 +61,7 @@
   gap: 1rem;
   padding: 2rem;
   color: #888888;
-  border-radius: 16px;
+  border-radius: 15px;
 }
 
 .cardsP > div > p:nth-child(1) {
@@ -68,24 +74,30 @@
 }
 .cardsP > div > p:nth-child(2) {
   font-family: " Poppins";
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 700;
   line-height: 30px;
   letter-spacing: 0px;
   text-align: left;
 }
 .cardsP > div > button {
-  width: 115px;
+  width: 105px !important;
+  height: 36px;
   padding: 0.6rem 1rem !important;
   font-family: "Poppins";
   font-style: normal !important;
   font-weight: 700 !important;
+  font-size: 9px !important;
+  line-height: 11px !important;
+}
+.cardsP > div:nth-child(2) > button {
+  width: 127px !important;
+  height: 42px;
   font-size: 11px !important;
-  line-height: 16px !important;
 }
 .cardsP > div > p:nth-child(3) {
   font-family: "Poppins";
-  font-size: 12px;
+  font-size: 10px;
   font-weight: 400;
   line-height: 19px;
   letter-spacing: 0px;
@@ -101,17 +113,13 @@
   color: #888888;
   border-radius: 16px;
   background-color: white;
-  border-style: solid;
-  border-width: 2px;
-  border-image-source: linear-gradient(
-      178.18deg,
-      #fd749b -13.56%,
-      #281ac8 158.3%
-    )
-    1;
-  border-image-slice: 1;
-  border-radius: 10px;
+  border: 1px solid gray;
+  border-color: rgb(134 25 143);
+  border-radius: 15px;
+  
 }
+
+
 .cardsP > div:nth-child(2) > p:nth-child(1) {
   color: #333333;
 }
@@ -121,6 +129,8 @@
 .cardsP > div:nth-child(2) > p:nth-child(2) {
   background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
   -webkit-background-clip: text;
+  font-size: 24px !important;
+  line-height: 39px !important;
   -webkit-text-fill-color: transparent;
 }
 
@@ -216,7 +226,7 @@
   letter-spacing: 0px;
   text-align: center;
   color: white;
-  width: 40%;
+  width: 30%;
 }
 .clientSecPChild > div:nth-child(1) > img:nth-child(2) {
   width: 4%;
@@ -230,8 +240,20 @@
   letter-spacing: 0px;
   text-align: center;
   color: white;
+  width: 42%;
+}
+
+@media (max-width: 800px) {
+  
+.clientSecPChild > div:nth-child(1) > p:nth-child(3) {
+  width: 40%;
+}
+.clientSecPChild > div:nth-child(1) > p:nth-child(1) {
   width: 50%;
 }
+
+}
+
 
 .clientSecPChild > div:nth-child(1) {
   display: flex;
@@ -242,10 +264,18 @@
 }
 
 .clientSecPChild > div:nth-child(2) > img {
-  width: 70%;
-  margin: auto;
+  width: 100%;
+  margin:2rem auto auto auto;
 }
 
+
+@media (max-width: 1200px) {
+  .clientSecPChild > div:nth-child(2) > img {
+    width: 80%;
+    display: block;
+    margin: auto;
+  }
+}
 @media (max-width: 650px) {
   .clientSecP {
     padding: 10rem 1rem;
