--- a/src/Styles/LandingPage/Blogs/CardType.module.css
+++ b/src/Styles/LandingPage/Blogs/CardType.module.css
@@ -27,18 +27,19 @@
 }
 
 .card {
-  width: 70%;
+  width: 65%;
   margin: auto;
-  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 3rem;
   border-radius: 12px;
-  margin-top: 5rem;
-  padding: 3rem 2rem;
+  margin-top: 7rem;
+  padding: 3rem 2rem 5rem  2rem;
+  background: #FFFFFF;
   box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
 }
 
 @media (max-width: 600px) {
@@ -62,7 +63,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 28px;
-  line-height: 35px;
+  line-height: 42px;
   margin: auto;
 }
 
@@ -80,13 +81,17 @@
 .card > div:nth-child(2) {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 4rem;
+  padding: 1rem 0px 2rem 0px;   
 }
 
 .card > div:nth-child(2) > div {
-  width: 60%;
+  width:262px;
+  height: 226px;
+
   padding: 3rem;
   border: 1px solid gray;
+  border-color: rgb(134 25 143);
   border-radius: 20px !important;
   display: flex;
   gap: 2rem;
@@ -106,15 +111,12 @@
   text-align: center;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 1000px) {
   .card > div:nth-child(2) {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 2rem;
-  }
-  .card > div:nth-child(2) > div {
-    width: 90%;
   }
 }
