--- a/src/Styles/LandingPage/Header/Header.module.css
+++ b/src/Styles/LandingPage/Header/Header.module.css
@@ -10,19 +10,45 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
 }
 
 .parent {
-  width: 100%;
+  width: 90%;
   justify-content: center;
   align-items: center;
-  padding-bottom: 5rem;
+  padding: 5rem 0px;
   position: relative;
+  margin: auto;
 }
+
+@media (max-width: 1430px) {
+  .parent{
+    width: 95%;
+    padding-top: 2.5rem;
+    padding-bottom: 10rem;
+  }
+  
+}
+@media (max-width: 1200px) {
+  .parent{
+    width: 100%;
+    padding-top: 0%;
+    padding-bottom: 5rem;
+  }
+  .parent > div:nth-child(2){
+    flex:1 ;
+  }
+}
+
 .parent > div:nth-child(1) {
   gap: 1rem;
 }
-.parent > div {
+.parent > div:nth-child(1) {
   flex: 1;
   color: white;
-  padding: 4rem 2rem;
+  padding: 4rem;
+}
+.parent > div:nth-child(1) {
+  flex: 1;
+  color: white;
+  padding: 4rem 1rem;
 }
 .parent > div:nth-child(1) {
   width: 80%;
@@ -197,8 +223,19 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
 /* Next Section */
 .headerBottomSideP {
   display: flex;
-  margin: 2rem 0px;
+  /* margin: 2rem 0px; */
   padding-bottom: 2rem;
+  width: 85%;
+  margin:2rem auto 2rem auto;
+  position: relative;
+  z-index: 2;
+}
+
+@media (max-width:1100px) {
+  
+  .headerBottomSideP {
+    width: 95%;
+  }
 }
 
 .headerBottomSideP > div {
@@ -235,10 +272,10 @@ background-image: url("../../../Images/Header/Rectangle\ 284.png");
   font-family: "Poppins";
   font-size: 16px;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 40px;
   letter-spacing: 0px;
   text-align: left;
-  padding-right: 2rem;
+  padding-right: 4rem;
 }
 
 .headerBottomSideP > div:nth-child(2) > button {
