--- a/src/Styles/AboutPage/AboutPHeader.module.css
+++ b/src/Styles/AboutPage/AboutPHeader.module.css
@@ -10,11 +10,19 @@
 }
 
 .parent {
-  width: 100%;
+  width:85%;
   justify-content: center;
   align-items: center;
   padding-bottom: 5rem;
   position: relative;
+  margin:auto;
+}
+
+@media (max-width: 1050px) {
+  .parent{
+    width: 90%;
+  }
+
 }
 .parent > div:nth-child(1) {
   gap: 1rem;
@@ -73,10 +81,6 @@
   .Allparent {
     padding: 10rem 0px;
   }
-
-  .P2 {
-    padding-top: 4rem !important; 
-  }
 }
 @media (max-width: 950px) {
   .parent > div {
@@ -112,7 +116,8 @@
 @media (max-width: 650px) {
   .parent {
     flex-direction: column;
-    padding: 7rem 0px;
+    padding: 3rem 0px;
+    width: 97%;
   }
   .parent > div {
     text-align: center !important;
@@ -145,7 +150,8 @@
 }
 
 .P2 {
-  margin-top: 2rem;
+  position: relative;
+  z-index: 2;
 }
 
 
@@ -159,11 +165,24 @@
   -webkit-text-fill-color: transparent !important;
   font-size: 18px;
   font-weight: 700;
-  line-height: 25px;
+  line-height: 40px;
   font-family: "Poppins";
   text-align: center;
-  width: 60%;
+  width: 33%;
   margin: auto;
+ 
+}
+
+@media (max-width: 1200px) {
+  .wel {
+    padding-top: 3rem;
+    width: 50%;
+  }
+}
+@media (max-width: 750px) {
+  .wel {
+    width: 60%;
+  }
 }
 
 @media (max-width: 500px) {
@@ -194,7 +213,8 @@
 
 .P3 > div {
   width: 70%;
-  border: 2px solid gray;
+  border: 1px solid gray;
+  border-color:rgb(134 25 143);
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -202,7 +222,7 @@
   align-items: center;
   gap: 1rem;
   margin: auto;
-  padding: 2rem;
+  padding:3rem 2rem;
 }
 
 .P3 > div > img {
@@ -212,7 +232,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .P3 > div > div:nth-child(2) * {
@@ -238,7 +258,19 @@
   line-height: 40px;
   letter-spacing: 0px;
   text-align: center;
-  width: 80%;
+  width: 55%;
+  margin: 1rem 0px;
+}
+
+@media (max-width: 1200px) {
+  .P3 > div > p:nth-child(3) {
+    width: 70%;
+  }
+}
+@media (max-width: 900px) {
+  .P3 > div > p:nth-child(3) {
+    width: 80%;
+  }
 }
 
 @media (max-width: 650px) {
@@ -249,6 +281,7 @@
 @media (max-width: 600px) {
   .P3 > div {
     width: 95%;
+    padding: 3rem 0.5rem;
   }
   .P3 > div > img {
     width: 95%;
