--- a/src/Styles/AboutPage/TeamsComp.module.css
+++ b/src/Styles/AboutPage/TeamsComp.module.css
@@ -6,14 +6,17 @@
   ) !important;
   background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 45px;
+  font-size: 28px;
+  font-weight: 700;
   font-family: "Poppins";
   text-align: center;
   margin: auto;
 }
 
+.P1 > div:nth-child(1) > p {
+
+  padding-top: 4rem;
+}
 .P1 > div:nth-child(2) {
   display: flex;
   flex-direction: column;
@@ -70,12 +73,11 @@
   ) !important;
   background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
-  font-family: "Open Sans";
-  font-size: 32px;
-  font-weight: 400;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
   line-height: 30px;
-  letter-spacing: 0px;
-  text-align: right;
 }
 
 .CardP > div > div > p:nth-child(2) {
@@ -85,10 +87,29 @@
   line-height: 30px;
   letter-spacing: 0px;
   text-align: right;
+  width: 65%;
 }
 
 .CardP > :nth-child(odd) div > p {
   text-align: right !important;
+  margin-left: 35%;
+}
+
+@media (max-width: 1000px) {
+  .CardP > div > div > p:nth-child(2) {
+    width: 80%;
+  }
+  .CardP > :nth-child(odd) div > p {
+    margin-left: 20%;
+  }
+}
+@media (max-width: 750px) {
+  .CardP > div > div > p:nth-child(2) {
+    width: 95%;
+  }
+  .CardP > :nth-child(odd) div > p {
+    margin-left: 5%;
+  }
 }
 
 .CardP > :nth-child(even) div > p {
@@ -119,8 +140,8 @@
   background-color: white;
   position: relative;
   z-index: 5;
-  padding: 4rem 1rem 2rem 1rem;
-  gap: 1rem;
+  padding: 8rem 1rem 2rem 1rem;
+  gap: 4rem;
 }
 
 .P2 > div * {
@@ -143,12 +164,18 @@
   font-family: "Poppins";
   font-size: 16px;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 40px;
   letter-spacing: 0px;
   text-align: center;
-  width: 70%;
+  width: 37%;
   margin: auto;
 }
+@media (max-width: 1000px) {
+  .P2 > p:nth-child(2) {
+    width: 70%;
+  }
+}
+
 
 @media (max-width: 500px) {
   .P2 > div * {
