--- a/src/Styles/AboutPage/AboutPHeader.module.css
+++ b/src/Styles/AboutPage/AboutPHeader.module.css
@@ -18,6 +18,12 @@
   margin:auto;
 }
 
+@media (max-width: 1450px) {
+  .parent{
+    padding-bottom:10rem ;
+  }
+}
+
 @media (max-width: 1050px) {
   .parent{
     width: 90%;
@@ -116,7 +122,7 @@
 @media (max-width: 650px) {
   .parent {
     flex-direction: column;
-    padding: 3rem 0px;
+    padding: 3rem 0px 6rem 0px;
     width: 97%;
   }
   .parent > div {
