--- a/src/Styles/AboutPage/TeamsComp.module.css
+++ b/src/Styles/AboutPage/TeamsComp.module.css
@@ -144,6 +144,14 @@
   gap: 4rem;
 }
 
+@media (max-width: 1000px) {
+
+  .P2 {
+    padding: 4rem 1rem 2rem 1rem;
+    gap:2rem;
+  }
+}
+
 .P2 > div * {
   background: linear-gradient(
     178.18deg,
