--- a/src/Styles/BlogPage/Cards.module.css
+++ b/src/Styles/BlogPage/Cards.module.css
@@ -5,10 +5,10 @@
 }
 
 .card {
-  width: 70%;
+  width: 77%;
   margin: auto;
   border-radius: 12px;
-  margin: 2rem auto;
+  margin: 3rem auto;
   /* border: 2px solid black; */
 }
 
@@ -24,24 +24,25 @@
   -webkit-text-fill-color: transparent;
   font-size: 32px;
   font-weight: 700;
-  line-height: 52px;
+  line-height: 45px;
   font-family: "Poppins";
   text-align: center;
   /* width: 60%; */
   margin: auto;
 }
 .card > div {
-  padding: 2rem 1rem;
+  padding: 4rem 1rem 3rem 1rem;
   width: 99.5%;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1.5rem;
-  border: 2px solid gray;
+  gap: 2rem;
+  border: 1px solid gray;
+  border-color: rgb(134 25 143);;
   border-top: 0;
-  border-radius: 12px;
+  border-radius:30px;
   border-top-right-radius: 0%;
   border-top-left-radius: 0%;
 }
@@ -60,7 +61,7 @@
   line-height: 28px;
   letter-spacing: 0px;
   text-align: center;
-  width: 70%;
+  width: 75%;
 }
 
 @media (max-width: 800px) {
