--- a/src/Styles/BlogPage/More.module.css
+++ b/src/Styles/BlogPage/More.module.css
@@ -19,6 +19,12 @@
   border-radius: 100% !important;
   box-shadow: 0px 0px 2px white !important;
   border: 1px solid #e0e0e0 !important;
+  width: 60px !important;
+  height: 60px !important;
+}
+.P1 button:nth-child(5) {
+  width: 100px !important;
+  border-radius: 100px !important;
 }
 
 @media (max-width: 500px) {
