--- a/src/Styles/BlogContentPage/BlogContentP.module.css
+++ b/src/Styles/BlogContentPage/BlogContentP.module.css
@@ -16,9 +16,7 @@
     height: 70vh;
     justify-content: center;
     align-items: center;
-    /* padding-bottom: 5rem; */
     position: relative;
-    /* padding-top: 0rem !important; */
   }
   .parent > div:nth-child(1) {
     gap: 1rem;
@@ -40,19 +38,27 @@
     font-family: "Poppins";
     font-size: 32px;
     font-weight: 700;
-    line-height: 60px;
+    line-height: 45px;
     letter-spacing: 0px;
   }
   
-  .parent > div:nth-child(1) > * {
-    padding-left: 3rem;
+  .parent > div:nth-child(1) > p {
+    margin: auto;
+    width: 60%;
+  }
+  
+  @media (max-width: 850px) {
+    .parent > div:nth-child(1) > p {
+      width: 90%;
+    }
+
   }
   
   .parent > div:nth-child(1) > p:nth-child(1) {
     font-family: "Poppins";
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 400;
-    line-height: 18px;
+    line-height: 20px;
     letter-spacing: 0px;
   }
 
@@ -116,13 +122,15 @@
     .parent {
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
       padding: 0%;
+      width: 100%;
     }
     .parent > div {
       text-align: center !important;
       padding: 1rem 0px;
       margin: 0% !important;
+      flex: 0 ;
     }
     .parent > div:nth-child(1) > * {
       padding-left: 0rem;
