--- a/src/Styles/BlogContentPage/FormT.module.css
+++ b/src/Styles/BlogContentPage/FormT.module.css
@@ -3,8 +3,18 @@
   flex-direction: column;
   padding: 3rem 5rem;
   gap: 2rem;
+  width: 64%;
+  margin: auto;
 }
-
+.P1  input {
+  width: 411px;
+  height: 60px;
+  outline: 0;
+}
+.P1  textarea{
+  width: 100%;
+  height: 190px !important;
+}
 .P1 > div:nth-child(1) {
   display: flex;
   gap: 1rem;
@@ -40,13 +50,29 @@
   /* outline: 1px solid #d1d1d1; */
 }
 
+@media (max-width: 1200px) {
+  .P1{
+    width: 75%;
+  }
+
+}
+@media (max-width: 1000px) {
+  .P1{
+    width: 90%;
+  }
+
+}
 @media (max-width: 700px) {
   .P1 > div:nth-child(1) {
     flex-direction: column;
+  }
+  .P1 input {
+    width: 100%;
   }
 }
 @media (max-width: 500px) {
   .P1 {
     padding: 3rem 1.5rem;
+    width: 98%;
   }
 }
